# simple_notif_daemon

./: README.md  es.froggi.simple_notif_daemon.service.in  es.froggi.steam_notif_daemon.service.in  main.c  meson.build
